# hit-leiden

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  clippy.toml  rustfmt.toml
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
benchmarks/criterion/: hit_leiden_suite.rs
docs/: 2601.08554-markitdown.md  2601.08554.md  README.md
docs/guide/: hit_leiden_explained.md
docs/math/: hit_leiden_spec.md
docs/runbooks/: fallback_diagnostics.md  release_gate.md
scripts/: download_it_2004.sh
specs/001-hit-leiden-rust/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs
src/accel/: cuda.rs  hit_leiden_kernel.cu  mod.rs  native.rs  probe.rs  rocm.rs  target.rs
src/benchmark/: compare.rs  dynamic_graph.rs  hardware_profile.rs  hit_leiden_incremental.rs  manifest.rs  mod.rs  release_gate.rs  runner.rs  st_leiden_baseline.rs
src/cli/: benchmark.rs  mod.rs  options.rs  run.rs
src/core/: backend.rs  config.rs  error.rs  mod.rs  report.rs  types.rs
tests/: contract_tests.rs  integration_tests.rs  property_tests.rs
tests/contract/: mod.rs  test_backend_resolution.rs  test_compare_baseline.rs  test_run_validate.rs
tests/integration/: mod.rs  test_benchmark_reproducibility.rs  test_connected_graph_not_all_singletons.rs  test_cuda_fallback.rs  test_cuda_parity.rs  test_default_config_minimal_args.rs  test_deterministic_identity.rs  test_mmap_parity.rs  test_neo4j_snapshot_parity.rs  (+4 more)
(+26 files in other folders)
