[package]
name    = "hit_leiden"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = [
  "derive",
] }
rayon = "1.10"
smallvec = "1.13"
bitvec = "1.0"
thiserror = "2.0"

[dev-dependencies]
proptest  = "1.6"
criterion = "0.6"

[build-dependencies]
cc = "1.0"

[features]
default = [
]
native = [
]
cuda = [
]
rocm = [
]
